--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -19,30 +19,36 @@
 
 <!-- code_chunk_output -->
 
-- [树的遍历不同方式](#树的遍历不同方式)
-  - [先序遍历](#先序遍历)
-  - [中序遍历 L Root R](#中序遍历-l-root-r)
-  - [后序遍历 L R root](#后序遍历-l-r-root)
-- [102. 二叉树的层序遍历](#102-二叉树的层序遍历)
-- [递归解二叉树问题模板](#递归解二叉树问题模板)
-  - [自顶而下](#自顶而下)
-  - [自底而上](#自底而上)
-- [104. 二叉树的最大深度](#104-二叉树的最大深度)
-- [98. 验证二叉搜索树 [KEY]](#98-验证二叉搜索树-key)
-- [101. 对称二叉树](#101-对称二叉树)
-- [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
-- [112. 路径总和 [EASY]](#112-路径总和-easy)
-- [从中序和后序中构建二叉树](#从中序和后序中构建二叉树)
-- [先序加中序构建二叉树](#先序加中序构建二叉树)
-- [填充每个节点的下一个右侧节点指针](#填充每个节点的下一个右侧节点指针)
-- [二叉树的最近公共祖先](#二叉树的最近公共祖先)
-- [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
-- [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
-- [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
-- [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
+- [遍历](#遍历)
+  - [树的遍历不同方式](#树的遍历不同方式)
+    - [先序遍历](#先序遍历)
+    - [中序遍历 L Root R](#中序遍历-l-root-r)
+    - [后序遍历 L R root](#后序遍历-l-r-root)
+  - [102. 二叉树的层序遍历](#102-二叉树的层序遍历)
+  - [103. 二叉树的锯齿形层序遍历 [Medium]](#103-二叉树的锯齿形层序遍历-medium)
+  - [递归解二叉树问题模板](#递归解二叉树问题模板)
+    - [自顶而下](#自顶而下)
+    - [自底而上](#自底而上)
+  - [104. 二叉树的最大深度](#104-二叉树的最大深度)
+  - [98. 验证二叉搜索树 [KEY]](#98-验证二叉搜索树-key)
+  - [101. 对称二叉树](#101-对称二叉树)
+- [树的构建](#树的构建)
+  - [108. 有序数组转搜索二叉树 [KEY]](#108-有序数组转搜索二叉树-key)
+  - [从中序和后序中构建二叉树](#从中序和后序中构建二叉树)
+  - [先序加中序构建二叉树](#先序加中序构建二叉树)
+  - [填充每个节点的下一个右侧节点指针](#填充每个节点的下一个右侧节点指针)
+  - [二叉树的最近公共祖先](#二叉树的最近公共祖先)
+  - [二叉树的序列化与反序列化 [HARD]](#二叉树的序列化与反序列化-hard)
+- [树的查找](#树的查找)
+  - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
+  - [112. 路径总和 [EASY]](#112-路径总和-easy)
+  - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
+  - [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
+  - [二叉搜索树BST中第K小的元素  []](#二叉搜索树bst中第k小的元素--)
+- [面试](#面试)
 
 <!-- /code_chunk_output -->
-
+## 遍历
 ### 树的遍历不同方式
 
 #### 先序遍历
@@ -219,6 +225,60 @@ public:
     }
 };
 ```
+
+### 103. 二叉树的锯齿形层序遍历 [Medium]
+- 仍然逃不过bfs的框架
+- 区别在于需要用到双向队列，或者用队列和栈来替代，以完成**锯齿形**的遍历
+  - 时间复杂度O(N) N为节点数量  空间复杂度O(N)
+- 双向队列**deque**: push_back/ push_front() pop_back/pop_front
+- 单向队列**queue**
+```
+class Solution {
+public:
+    vector<vector<int>> zigzagLevelOrder(TreeNode* root) {
+        vector<vector<int>> ans;
+        //stack<TreeNode*> st;
+        deque<TreeNode*> q; // 双向队列
+        if (root == nullptr)
+            return ans;
+        q.push_back(root);
+        int k = 0;
+        vector<int> vals;
+        while (!q.empty()) {
+            if (k % 2 == 0) {
+                int qs = q.size();
+                for (int i = 0; i < qs; i++) {
+                    TreeNode* cur = q.front();
+                    vals.push_back(cur -> val);
+                    q.pop_front();
+                    if (cur -> left)
+                        q.push_back(cur -> left);
+                    if (cur -> right)
+                        q.push_back(cur -> right);
+                }
+            }
+            else {
+                int qs = q.size();
+                for (int i = 0; i < qs; i++) {
+                    TreeNode* cur = q.back();
+                    vals.push_back(cur -> val);
+                    q.pop_back();
+                    if (cur -> right)
+                        q.push_front(cur -> right);
+                    if (cur -> left)
+                        q.push_front(cur -> left);
+                }
+            }
+            ans.push_back(vals);
+            vals.clear();
+            k++;
+        }
+        return ans;
+
+    }
+};
+```
+
 
 ### 递归解二叉树问题模板
 #### 自顶而下
@@ -442,6 +502,7 @@ public:
 };
 ```
 
+## 树的构建
 ### 108. 有序数组转搜索二叉树 [KEY]
 
 - 要求左右子树高度平衡，即需要选择数组中间位置的数字作为根节点
@@ -470,60 +531,7 @@ public:
 ```
 ![avatar](./108-01.png)
 
-### 112. 路径总和 [EASY]
-- **计算从根节点到叶子节点的路径和**， 需要判断是否为叶节点
-- 递归解法; 时间复杂度 O(N) 空间复杂度 O(H)
-```
-class Solution {
-public:
-    bool hasPathSum(TreeNode* root, int targetSum) {
-        if (root == nullptr) 
-            return false;
-        if (root -> left == nullptr && root -> right == nullptr) {
-            return root -> val == targetSum;
-        }
-        return hasPathSum(root -> left, targetSum - root->val) || hasPathSum(root -> right, targetSum - root->val);
-    }
-};
-```
-- 迭代解法： **与通用bfs相比，需要增加一个队列记录当前路径的总和**
-- 时间复杂度 O(N)； 空间复杂度 O(N)
-```
-class Solution {
-public:
-    bool hasPathSum(TreeNode* root, int targetSum) {
-        if (!root)
-            return false;
-        queue<TreeNode*> q;
-        queue<int> qv; // 增加一个队列来记录求和情况
-        qv.push(root -> val);
-        q.push(root);
-        while (!q.empty()) {
-            int q_size =  q.size();
-            for (int i = 0; i < q_size; i++) {
-                TreeNode* cur = q.front();
-                q.pop();
-                int tmp = qv.front();
-                qv.pop();
-                if (!cur -> left && !cur -> right) {
-                    if ( tmp == targetSum) {
-                        return true;
-                    }
-                }
-                if (cur -> left) {
-                    q.push(cur -> left);
-                    qv.push(cur -> left -> val + tmp);
-                }
-                if (cur -> right) {
-                    q.push(cur -> right);
-                    qv.push(cur -> right -> val + tmp);
-                }
-            }
-        }
-         return  false;
-    }
-};
-```
+
 
 ### 从中序和后序中构建二叉树
 - 寻找根节点位置，并确定根节点在何处划分左右子树
@@ -761,7 +769,7 @@ public:
     }
 };
 ```
-
+## 树的查找
 ### 剑指26. 树的子结构 [Medium] [Tencent]
 - 二叉树的应用
 - 计算一个树B是否为另一个树A的子结构
@@ -789,6 +797,61 @@ public:
         bool r2 = isSubStructure(A -> left, B);
         bool r3 = isSubStructure(A -> right, B);
         return r1 || r2 || r3;
+    }
+};
+```
+
+### 112. 路径总和 [EASY]
+- **计算从根节点到叶子节点的路径和**， 需要判断是否为叶节点
+- 递归解法; 时间复杂度 O(N) 空间复杂度 O(H)
+```
+class Solution {
+public:
+    bool hasPathSum(TreeNode* root, int targetSum) {
+        if (root == nullptr) 
+            return false;
+        if (root -> left == nullptr && root -> right == nullptr) {
+            return root -> val == targetSum;
+        }
+        return hasPathSum(root -> left, targetSum - root->val) || hasPathSum(root -> right, targetSum - root->val);
+    }
+};
+```
+- 迭代解法： **与通用bfs相比，需要增加一个队列记录当前路径的总和**
+- 时间复杂度 O(N)； 空间复杂度 O(N)
+```
+class Solution {
+public:
+    bool hasPathSum(TreeNode* root, int targetSum) {
+        if (!root)
+            return false;
+        queue<TreeNode*> q;
+        queue<int> qv; // 增加一个队列来记录求和情况
+        qv.push(root -> val);
+        q.push(root);
+        while (!q.empty()) {
+            int q_size =  q.size();
+            for (int i = 0; i < q_size; i++) {
+                TreeNode* cur = q.front();
+                q.pop();
+                int tmp = qv.front();
+                qv.pop();
+                if (!cur -> left && !cur -> right) {
+                    if ( tmp == targetSum) {
+                        return true;
+                    }
+                }
+                if (cur -> left) {
+                    q.push(cur -> left);
+                    qv.push(cur -> left -> val + tmp);
+                }
+                if (cur -> right) {
+                    q.push(cur -> right);
+                    qv.push(cur -> right -> val + tmp);
+                }
+            }
+        }
+         return  false;
     }
 };
 ```
@@ -882,3 +945,62 @@ public:
     }
 };
 ```
+
+### 二叉搜索树BST中第K小的元素  []
+- 基本做法：遍历整颗树，然后从结果中取值
+```
+class Solution {
+public:
+    vector<int> res;
+    void inorder(TreeNode* root) {
+        if (!root) {
+            return;
+        }
+        inorder(root -> left);
+        res.push_back(root -> val);
+        inorder(root -> right);
+    }
+    int kthSmallest(TreeNode* root, int k) {
+        inorder(root);
+        if (k > res.size()) {
+            return res[res.size() - 1];
+        }
+        return res[k - 1];
+    }
+};
+```
+- 也可以基于stack进行迭代式遍历，减少遍历次数
+```
+class Solution {
+public:
+    int kthSmallest(TreeNode* root, int k) {
+        
+        stack<TreeNode*> st;
+        int count = 0;
+        int res = 0;
+        while (root || !st.empty()) {
+            while (root) {
+                st.push(root);
+                root = root -> left;
+            }
+            root = st.top();
+            st.pop();
+            count++;
+            if (count == k) {
+                return root -> val;
+            }
+            root = root -> right;
+        }
+        return res;
+    }
+};
+```
+
+## 面试
+- 二叉树的序列化和反序列化
+- 子结构
+- 路径和
+- 任意进制相加
+- 二叉树的层序遍历
+- 反转字符串。
+- 滑动窗口求最大值
