--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -12,6 +12,10 @@
 - [8. 实现strStr() 子串匹配查找](#8-实现strstr-子串匹配查找)
 - [38.外观数列](#38外观数列)
 - [14. 最长公共前缀](#14-最长公共前缀)
+- [49. 字母异位词组合](#49-字母异位词组合)
+- [3. 无重复字符的最长子串 [Medium] [Tencent]](#3-无重复字符的最长子串-medium-tencent)
+- [5. 最长回文子串 [Medium] [ByteDance]](#5-最长回文子串-medium-bytedance)
+- [334. 递增的三元子序列 [Medium]](#334-递增的三元子序列-medium)
 
 <!-- /code_chunk_output -->
 
@@ -417,6 +421,175 @@ public:
         }
         return res;
 
+
+    }
+};
+```
+### 49. 字母异位词组合
+- 考察hash表的使用
+- **两个字符串互为字母异位词，当且仅当两个字符串包含的字母相同**。同一组字母异位词中的字符串具备相同点，可以使用相同点作为一组字母异位词的标志，使用哈希表存储每一组字母异位词，哈希表的键为一组字母异位词的标志，哈希表的值为一组字母异位词列表
+
+```
+class Solution {
+public:
+    unordered_map<string, vector<int>> maps;
+    vector<vector<string>> groupAnagrams(vector<string>& strs) {
+        for (int i = 0; i < strs.size(); i++) {
+            string cur = strs[i];
+            sort(cur.begin(), cur.end());
+            if (!maps.count(cur)) {
+                vector<int> tmp;
+                tmp.push_back(i);
+                maps[cur] = tmp;
+            }
+            else {
+                maps[cur].push_back(i);
+            }
+        }
+        vector<vector<string>> ans;
+        for (unordered_map<string, vector<int>>::iterator iter = maps.begin(); iter != maps.end(); iter++) {
+            vector<string> tmp;
+            for (auto s : iter -> second) {
+                tmp.push_back(strs[s]);
+            }
+            ans.push_back(tmp);
+        }
+        return ans;
+    }
+};
+```
+
+
+### 3. 无重复字符的最长子串 [Medium] [Tencent]
+- 双指针/滑动窗口策略
+- 仅遍历字符串一遍即可完成查找
+  - 利用哈希表记录当前遍历字符，当出现重复字符时右指针停止遍历
+  - 计算当前窗口大小，更新结果
+  - 然后逐一移动左指针，将前一位结果从哈希表中移除，重复以上操作
+  - 时间复杂度O(N) 空间复杂度O(N)
+```
+class Solution {
+public:
+    int lengthOfLongestSubstring(string s) {
+        unordered_set<char> seen;
+        int right= 0;
+        int ans = 0;
+        int lens = s.size();
+        for (int i = 0; i < lens; i++) {
+            // 左指针逐步调整
+            if (i != 0) {
+                seen.erase(s[i - 1]);
+            }
+            // 右指针移动
+            while (right < lens && !seen.count(s[right])) {
+                seen.insert(s[right]);
+                right++;
+            }
+            ans = max(ans, right - i);
+        }
+        return ans;
+    }
+};
+```
+
+### 5. 最长回文子串 [Medium] [ByteDance]
+- 基础做法： 双指针中心展开方法进行回文子串搜索
+  - 搜索回文子串时考虑是奇数还是偶数串
+  - 时间复杂度O(N^2) 空间复杂度O(N)
+```
+class Solution {
+public:
+    string longestPalindrome(string s) {
+        int maxLen = 1;
+        string res;
+        for (int i = 0; i < s.size() - 1; i++) {
+            string odd = find(s, i, i);
+            string even = find(s, i, i + 1);
+            //cout << odd << endl;
+            //cout << even << endl;
+            string tmp = odd.size() > even.size() ? odd : even;
+            if (tmp.size() > res.size())
+                res = tmp;
+
+        }
+        if (res.empty()) {
+            res = s.substr(0, 1);
+        }
+        return res;
+    }
+    string find(string s, int left, int right) {
+        while(left >= 0 && right < s.size() && s[left] == s[right]) {
+            left--;
+            right++;
+        }
+        return s.substr(left + 1, right - left - 1);
+    }
+
+};
+```
+
+- **DP法解题**
+  - 状态转移方程：`P[i,j`P(i,j)=P(i+1,j−1)∧(Si==Sj)
+  - `P[i,i] = true` `P[i,i+1]=(Si==Sj)`
+  - 时间复杂度 O(N^2) 空间复杂度 O(N^2)
+  - 总体不如双指针中心扩展来的快
+```
+class Solution {
+public:
+    string longestPalindrome(string s) {
+        int maxLen = 1;
+        int begin = 0;
+        int n = s.size();
+        vector<vector<int>> dp(n, vector<int>(n)); //初始化状态表
+        for (int j = 1; j < n; j++) {
+           // dp[j][j] = 1;
+            for (int i = 0; i < j; i++) {
+                if (s[j] == s[i]) {
+                    if (j - i < 3) {
+                        dp[i][j] = 1;
+                    } else{
+                        dp[i][j] = dp[i + 1][j - 1];
+                    }
+                }
+                else {
+                    dp[i][j] = 0;
+                }
+                if (dp[i][j] && j - i + 1 > maxLen) {
+                    maxLen = j - i + 1;
+                    begin = i;
+                }
+            }
+        }
+        return s.substr(begin, maxLen);
+    }
+   
+};
+```
+
+### 334. 递增的三元子序列 [Medium] 
+- 需要找出当前序列中的三个元素，满足递增性质
+- 在遍历中存储top2值，来完成三元自序列的判断
+- 即存在两级对比，时间复杂度 O(N)
+  - 若是4元子序列呢？三次对比？
+```
+class Solution {
+public:
+    bool increasingTriplet(vector<int>& nums) {
+        int min = INT_MAX;
+        int big = INT_MAX;
+        // 两级对比
+        for (int i = 0; i < nums.size(); i++) {
+            if (nums[i] > big) {
+                return true;
+            }
+            else if (nums[i] > min) {
+                big = nums[i]; 
+            }
+            else {
+                min = nums[i];
+            }
+        }
+        return false;
 
     }
 };
