--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -60,3 +60,30 @@ public:
     }
 };
 ```
+### 73. 矩阵置零  [Medium] 
+- 遍历
+```
+class Solution {
+public:
+    void setZeroes(vector<vector<int>>& matrix) {
+        vector<int> cols;
+        for (int i = 0; i < matrix.size(); i++) {
+            bool flag = false;
+            for (int j = 0; j < matrix[0].size(); j++) {
+                if (matrix[i][j] == 0) {
+                    cols.push_back(j);
+                    flag = true;
+                }
+            }
+            if (flag)
+                matrix[i].assign(matrix[i].size(), 0);
+        }
+        for (int i = 0; i < matrix.size(); i++) {
+            for (auto j : cols) {
+                matrix[i][j] = 0;
+            }
+        }
+        
+    }
+};
+```
