--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -11,6 +11,8 @@
 - [21. 合并两个有序链表](#21-合并两个有序链表)
 - [234. 回文链表判断](#234-回文链表判断)
 - [141. 环形链表操作](#141-环形链表操作)
+- [328. 奇偶数组  [Medium]](#328-奇偶数组-medium)
+- [160. 相交链表](#160-相交链表)
 - [小结](#小结)
 
 <!-- /code_chunk_output -->
@@ -465,6 +467,82 @@ public:
            }
        }
         return false;
+    }
+};
+```
+
+### 328. 奇偶数组  [Medium]
+- 给定奇偶交替排序的数组，进行奇偶部分的拆分连接
+- 方法：两个指针交替取奇偶值，然后进行头尾连接即可
+- 时间复杂度 O(N) 空间复杂度 O(1)
+
+```
+class Solution {
+public:
+    ListNode* oddEvenList(ListNode* head) {
+        if (!head) 
+            return head;
+        ListNode* p1 = head;
+        ListNode* head2 = head -> next;
+        ListNode* p2 = head2;
+        while (p1 -> next && p2 -> next) {
+           p1 -> next = p2 -> next;
+           p1 = p1 -> next;
+           p2 -> next = p1 -> next;
+           p2 = p2 -> next;
+        }
+        p1 -> next = head2;
+        return head;
+    }
+};
+```
+
+### 160. 相交链表
+
+```
+class Solution {
+public:
+    ListNode *getIntersectionNode(ListNode *headA, ListNode *headB) {
+        ListNode* p1 = headA;
+        ListNode* p2 = headB;
+        if (!headB || !headA)
+            return headA;
+        int countA = 0, countB = 0;
+        while(p1 -> next) {
+            p1 = p1 -> next;
+            countA++;
+        }
+        while(p2 -> next) {
+            p2 = p2 -> next;
+            countB++;
+        }
+        ListNode* fast;
+        ListNode* slow;
+        int step = 0;
+        if (countA > countB) {
+            slow = headA;
+            fast = headB;
+            step = countA - countB;
+        }
+        else {
+            slow = headB;
+            fast = headA;
+            step = countB - countA;
+        }
+        while (step--) {
+            cout << slow -> val << endl;
+            slow = slow -> next;
+        }
+        while (slow && fast  && slow  != fast) {
+            slow = slow -> next;
+            fast = fast -> next;
+        }
+        if (slow) {
+            return slow;
+        }
+        else {
+            return nullptr;
+        }
     }
 };
 ```
