--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -44,7 +44,7 @@
   - [112. 路径总和 [EASY]](#112-路径总和-easy)
   - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
   - [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
-  - [二叉搜索树BST中第K小的元素  []](#二叉搜索树bst中第k小的元素--)
+  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
 - [面试](#面试)
 
 <!-- /code_chunk_output -->
@@ -946,7 +946,7 @@ public:
 };
 ```
 
-### 二叉搜索树BST中第K小的元素  []
+### 230. 二叉搜索树BST中第K小的元素  [Medium]
 - 基本做法：遍历整颗树，然后从结果中取值
 ```
 class Solution {
@@ -995,6 +995,8 @@ public:
     }
 };
 ```
+
+
 
 ## 面试
 - 二叉树的序列化和反序列化
