--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -87,3 +87,60 @@ public:
     }
 };
 ```
+
+### 380. 常数时间插入/删除/随机取数组元素 [Medium]
+- 哈希表+动态数组实现
+- 删除： 将尾部元素与当前要删除的元素进行交互，然后再删除尾部数组，实现常量级的删除操作
+  
+```
+class RandomizedSet {
+public:
+    unordered_map<int, int> indexs;
+    vector<int> ans;
+
+    /** Initialize your data structure here. */
+    RandomizedSet() {
+
+    }
+    
+    /** Inserts a value to the set. Returns true if the set did not already contain the specified element. */
+    bool insert(int val) {
+        //cout << "insert" << endl;
+        if (indexs.count(val)) {
+            return false;
+        }
+        ans.push_back(val);
+        indexs[val] = ans.size() - 1;
+        return true;
+
+    }
+    
+    /** Removes a value from the set. Returns true if the set contained the specified element. */
+    bool remove(int val) {
+        //cout << "remove" << endl;
+        if (indexs.count(val)) {
+           // cout << "remove2" << endl;
+            
+            
+            int pos = indexs[val];
+            indexs.erase(val);
+            if (pos == ans.size() - 1){
+                ans.pop_back();
+                return true;
+            }
+            ans[pos] = ans.back();
+            indexs[ans.back()] = pos;
+            ans.pop_back();
+            
+            return true;
+        }
+        return false;
+    }
+    
+    /** Get a random element from the set. */
+    int getRandom() {
+        //cout << "Random" << endl;
+        return ans[rand() % ans.size()];
+    }
+};
+```
