--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -45,6 +45,9 @@
   - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
   - [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
   - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
+  - [剑指27. 二叉树的镜像](#剑指27-二叉树的镜像)
+  - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
+  - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
 - [面试](#面试)
 
 <!-- /code_chunk_output -->
@@ -996,6 +999,124 @@ public:
 };
 ```
 
+### 剑指27. 二叉树的镜像
+- 递归方法实现，交互左右指针即可，主要交换过程
+```
+class Solution {
+public:
+    TreeNode* mirrorTree(TreeNode* root) {
+        if (!root) {
+            return nullptr;
+        }
+        TreeNode* tmp = root -> left;
+        root -> left = mirrorTree(root -> right);
+        root -> right = mirrorTree(tmp);
+        return  root;
+    }
+};
+```
+
+### 剑指33. 二叉搜索树的后序遍历序列判断 [Medium] 
+- 给出一颗树的后序遍历列表，判断是否为二叉搜索树
+- **考察对BST的特性理解**，根据后序遍历的顺序 L R root，可以确定root节点位置
+  - 每次先搜索所有小于root节点的区间，即得到左子树区域
+  - 然后分析剩下的右子树部分是否都满足大于等于根节点的要求
+  - 递归地对左右两个区域继续进行判断
+  - `helper(left, mid-1)` `helper(mid, right-1)`
+```
+class Solution {
+public:
+    bool verifyPostorder(vector<int>& postorder) {
+        return helper(postorder, 0, postorder.size() - 1);
+    }
+    bool helper(vector<int>& postorder, int left, int right) {
+        if (left >= right) {
+            return true;
+        }
+        int mid = left;
+        // 寻找左子树部分
+        while (postorder[mid] < postorder[right]) {
+            mid++;
+        }
+        int tmp = mid;
+        // 对右子树部分进行扫描，确认是否存在非法情况
+        while (tmp < right) {
+            if (postorder[tmp++] < postorder[right]) 
+                {
+                    return false;
+                }
+        }
+        // 
+        return helper(postorder, left, mid - 1) && helper(postorder, mid, right - 1);
+    }
+};
+```
+- **单调栈解法**
+- 时间复杂度 O(N) 空间复杂度 O(N)
+  - 初始化： 单调栈 stackstack ，父节点值 root = +\infinroot=+∞ （初始值为正无穷大，可把树的根节点看为此无穷大节点的左孩子）；
+  - 倒序遍历 postorderpostorder ：记每个节点为 r_i
+    - 判断： 若 `r_i>root`，说明此后序遍历序列不满足二叉搜索树定义，直接返回 false ；
+    - 更新父节点 root ： 当栈不为空 且 r_i<stack.peek() 时，循环执行出栈，并将出栈节点赋给 rootroot 。
+    - 入栈： 将当前节点 r_i入栈；
+  - 若遍历完成，则说明后序遍历满足二叉搜索树定义，返回 true。
+```
+class Solution {
+public:
+    bool verifyPostorder(vector<int>& postorder) {
+        stack<int> st;
+        int root = INT_MAX;
+        for (int i = postorder.size() - 1; i >= 0; i--) {
+            int cur = postorder[i];
+            while (!st.empty() && st.top() > cur) {
+                root = st.top();
+                st.pop();
+            }
+            if (cur > root) {
+                return false;
+            }
+            st.push(cur);
+        }
+        return true;
+    }
+};
+```
+### 剑指36. BST与双向链表
+- 将BST调整指针方向，构成有序的双向链表
+- 需要在中序遍历的基础上，添加一些方向处理
+  - 具体来说，添加pre 和 head两个指针，来完成节点间的关联
+  - 时间复杂度 O（N） 空间复杂度 O(N)
+
+```
+class Solution {
+public:
+    Node* pre = nullptr;
+    Node* head = nullptr;
+    void inorder(Node* root) {
+        if (!root) {
+            return;
+        }
+        inorder(root -> left);
+        if (pre) {
+            pre -> right = root;
+        }
+        else {
+            head = root;
+        }
+        root -> left = pre;
+        pre = root;
+        inorder(root -> right);
+    }
+    Node* treeToDoublyList(Node* root) {
+        if (!root) {
+            return head;
+        }
+        inorder(root);
+        head -> left =pre;
+        pre -> right = head;
+        return head;
+    }
+};
+```
 
 
 ## 面试
