--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -26,10 +26,12 @@
     - [后序遍历 L R root](#后序遍历-l-r-root)
   - [102. 二叉树的层序遍历](#102-二叉树的层序遍历)
   - [103. 二叉树的锯齿形层序遍历 [Medium]](#103-二叉树的锯齿形层序遍历-medium)
+  - [107. 层序遍历2](#107-层序遍历2)
   - [递归解二叉树问题模板](#递归解二叉树问题模板)
     - [自顶而下](#自顶而下)
     - [自底而上](#自底而上)
   - [104. 二叉树的最大深度](#104-二叉树的最大深度)
+  - [111. 二叉树的最小深度](#111-二叉树的最小深度)
   - [98. 验证二叉搜索树 [KEY]](#98-验证二叉搜索树-key)
   - [101. 对称二叉树](#101-对称二叉树)
 - [树的构建](#树的构建)
@@ -45,7 +47,7 @@
   - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
   - [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
   - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
-  - [剑指27. 二叉树的镜像](#剑指27-二叉树的镜像)
+  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
   - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
 - [面试](#面试)
@@ -281,7 +283,40 @@ public:
     }
 };
 ```
-
+### 107. 层序遍历2
+- 注意首先对空值的判断
+- 层序遍历用队列
+- dfs用stack
+```
+class Solution {
+public:
+    vector<vector<int>> levelOrderBottom(TreeNode* root) {
+        vector<vector<int>> ans;
+        if (!root)
+            return ans;
+        queue<TreeNode*> st;
+        st.push(root);
+        while(!st.empty()) {
+            int s = st.size();
+            vector<int> tmp;
+            for(int i = 0; i < s; i++) {
+                TreeNode* cur = st.front();
+                st.pop();
+                tmp.push_back(cur -> val);
+                if (cur -> left) {
+                    st.push(cur -> left);
+                }
+                if (cur -> right) {
+                    st.push(cur -> right);
+                }
+            }
+            ans.push_back(tmp);
+        }
+        reverse(ans.begin(), ans.end());
+        return ans;
+    }
+};
+```
 
 ### 递归解二叉树问题模板
 #### 自顶而下
@@ -387,6 +422,30 @@ public:
 ![avatar](./dfs-0.png)
 ![avatar](./dfs-1.png)
 
+### 111. 二叉树的最小深度
+- 问题关键：找到叶子节点，左右子树都空都点，不能照搬最大深度的写法
+- 自顶而上的递归写法 **后序遍历**
+```
+class Solution {
+public:
+    int minDepth(TreeNode* root) {
+        if (!root) {
+            return 0;
+        }
+        int leftD = minDepth(root -> left);
+        int rightD = minDepth(root -> right);
+
+        if (root -> left && root -> right != nullptr) {
+            return  leftD + 1;
+        }
+        else if (root -> right && root -> left != nullptr) {
+            return  rightD + 1;
+        }
+        int res = min(leftD, rightD) + 1;
+        return res;
+    }
+};
+```
 ### 98. 验证二叉搜索树 [KEY]
 
 - 涉及基本的二叉树遍历以及二叉搜索树性质
@@ -674,6 +733,7 @@ public:
 ```
 ### 二叉树的最近公共祖先
 - 通过遍历实现，考虑二叉树节点的分布情况差异：
+  - **后序遍历** 自底而上的判断逻辑
   - 两个节点分布在左右子树中，最近公共祖先为root
   - 左右子树都不存在，返回null
   - 递归情况下位于同一子树，返回当前子树root
@@ -999,7 +1059,7 @@ public:
 };
 ```
 
-### 剑指27. 二叉树的镜像
+### 剑指27. 二叉树的镜像 / 反转二叉树
 - 递归方法实现，交互左右指针即可，主要交换过程
 ```
 class Solution {
@@ -1014,6 +1074,32 @@ public:
         return  root;
     }
 };
+```
+
+- 迭代法实现
+- 基于先序遍历完成：
+
+```
+class Solution { public:
+TreeNode* invertTree(TreeNode* root) { 
+    stack<TreeNode*> st;
+    if (root != NULL) 
+        st.push(root); 
+    while (!st.empty()) { 
+        TreeNode* node = st.top(); 
+        if (node != NULL) { 
+        st.pop(); 
+        if (node->right) st.push(node->right); // 右 
+        if (node->left) st.push(node->left);
+        // 左
+        st.push(node);
+        // 中
+        st.push(NULL);
+        } 
+        else { 
+            st.pop(); node = st.top(); st.pop(); 
+            swap(node->left, node->right);
+} } return root; // 节点处理逻辑
 ```
 
 ### 剑指33. 二叉搜索树的后序遍历序列判断 [Medium] 
