--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -32,6 +32,7 @@
     - [自底而上](#自底而上)
   - [104. 二叉树的最大深度](#104-二叉树的最大深度)
   - [111. 二叉树的最小深度](#111-二叉树的最小深度)
+  - [559. N叉树的最大深度](#559-n叉树的最大深度)
   - [98. 验证二叉搜索树 [KEY]](#98-验证二叉搜索树-key)
   - [101. 对称二叉树](#101-对称二叉树)
 - [树的构建](#树的构建)
@@ -46,10 +47,13 @@
   - [112. 路径总和 [EASY]](#112-路径总和-easy)
   - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
   - [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
-  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素-medium)
-  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像-反转二叉树)
+  - [257. 打印二叉树所有路径](#257-打印二叉树所有路径)
+  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
+  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
   - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
+  - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
+  - [404. 左叶子之和](#404-左叶子之和)
 - [面试](#面试)
 
 <!-- /code_chunk_output -->
@@ -423,7 +427,7 @@ public:
 ![avatar](./dfs-1.png)
 
 ### 111. 二叉树的最小深度
-- 问题关键：找到叶子节点，左右子树都空都点，不能照搬最大深度的写法
+- 问题关键：**找到叶子节点，左右子树都空都点**，不能照搬最大深度的写法
 - 自顶而上的递归写法 **后序遍历**
 ```
 class Solution {
@@ -443,6 +447,22 @@ public:
         }
         int res = min(leftD, rightD) + 1;
         return res;
+    }
+};
+```
+### 559. N叉树的最大深度
+- 二叉树的改造，同样遍历子节点即可，仍然是后序遍历
+```
+class Solution {
+public:
+    int maxDepth(Node* root) {
+        if (!root)
+            return 0;
+        int res = 0;
+        for (int i = 0; i < root -> children.size(); i++) {
+           res = max(res, maxDepth(root -> children[i]));
+        }
+        return res + 1;
     }
 };
 ```
@@ -1009,6 +1029,46 @@ public:
 };
 ```
 
+### 257. 打印二叉树所有路径
+- 回溯+递归法完成
+```
+class Solution {
+public:
+    vector<string> ans;
+    void trav(TreeNode* root, vector<int>& path) {
+        path.push_back(root -> val);
+        if (!root -> left && !root -> right) {
+            string tmp ="";
+            for (int i = 0; i < path.size(); i++) {
+                tmp+=to_string(path[i]);
+                if (i < path.size() - 1) {
+                    tmp+="->";
+                }
+            }
+            ans.push_back(tmp);
+            return;
+        }
+        if (root -> left) {
+            trav(root -> left, path);
+            path.pop_back();
+        }
+        if (root -> right) {
+            trav(root -> right, path);
+            path.pop_back();
+        }
+    }
+    vector<string> binaryTreePaths(TreeNode* root) {
+        vector<int> path;
+        if (!root) {
+            return ans;
+        }
+        trav(root, path);
+        return ans;
+    }
+};
+```
+
+
 ### 230. 二叉搜索树BST中第K小的元素  [Medium]
 - 基本做法：遍历整颗树，然后从结果中取值
 ```
@@ -1203,7 +1263,50 @@ public:
     }
 };
 ```
+### 110. 平衡二叉树的判断
+- 左右子树高度差不超过1
+  - 节点高度即从叶子节点往上数，**典型的后序遍历方式**
+  - 思路：后序遍历，最后判断左右差值是否合法
+```
+class Solution {
+public:
+    int getHeight(TreeNode* root) {
+        if (!root) return 0;
+        int l = getHeight(root -> left);
+        if (l == -1) return -1;
+        int r = getHeight(root -> right);
+        if (r == -1) return -1;
+        if (abs(l - r) > 1) 
+            return -1;
+        return max(l, r) + 1;
+    }
+    bool isBalanced(TreeNode* root) {
+        return  getHeight(root) == -1 ? false : true;
+    }
+};
+```
 
+### 404. 左叶子之和
+- 主要点： 确定左叶子
+  - 即`root -> left && !root -> left -> left && !root -> left -> right`
+  - 即通过父节点来进行属性判断
+```
+class Solution {
+public:
+    int sumOfLeftLeaves(TreeNode* root) {
+        if(!root) {
+            return 0;
+        }
+        int l = sumOfLeftLeaves(root -> left);
+        int r = sumOfLeftLeaves(root -> right);
+        int m = 0;
+        if (root -> left && !root -> left -> left && !root -> left -> right) {
+            m = root -> left -> val;
+        }
+        return m + l + r;
+    }
+};
+```
 
 ## 面试
 - 二叉树的序列化和反序列化
