--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -1,4 +1,5 @@
 
+[TOC]
 ## 动态规划
 
 
@@ -223,3 +224,123 @@ public:
     }
 };
 ```
+
+### 55. 跳跃游戏 [Medium]
+- 可以通过贪心的思路进行处理
+- 计算最大路径，**需要判断当前位置是否可达**即`i<=maxStep`
+
+```
+class Solution {
+public:
+    bool canJump(vector<int>& nums) {
+        
+        if (nums.size() <= 1)
+            return true;
+        int maxStep = nums[0];
+        for (int i = 1; i < nums.size() - 1; i++) {
+            if (i <= maxStep) {
+                maxStep = max(nums[i] + i, maxStep);
+            }
+        }
+        return maxStep >= nums.size() - 1;
+        
+    }
+};
+```
+### 62. 不同路径 [Medium]
+- 经典的dp任务： **给出矩形，计算到达右下角的路径数量**
+  - O(MN)
+  - `dp[i][j] = dp[i-1][j] + dp[i][j-1]`
+```
+class Solution {
+public:
+    int uniquePaths(int m, int n) {
+        int dp [100][100];
+        
+        for(int i = 0; i < m; i++) {
+            dp[i][0] = 1;
+        }
+        for(int i = 0; i < n; i++) {
+            dp[0][i] = 1;
+        }
+        for (int i = 1;i < m; i++) {
+            for (int j=1; j< n; j++) {
+                dp[i][j] = dp[i-1][j] + dp[i][j-1];
+            }
+        }
+        return dp[m-1][n-1];
+    }
+};
+```
+
+- 更直接的思路：组合数学公式：
+  - `C = C(m+n-2,m-1)` 组合公式
+
+
+### 322. 零钱兑换 [Medium]
+- dp方法的基础，**状态转移公式**： `dp[i] = min (dp[i - r_k]) + 1`
+- **初始化**： 
+  - dp[0] = 0
+  - 其他元素初始为`amount + 1`, 直接初始化为最大值，会在计算最小值chubug
+- 时间复杂度 O(nS) 空间复杂度 O(n)
+```
+class Solution {
+public:
+    int coinChange(vector<int>& coins, int amount) {
+        int n = coins.size();
+        vector<int> dp(amount + 1, amount + 1);// 技巧
+        dp[0] = 0;
+        // for (int i = 0; i < n; i++)
+        //     dp[coins[i]] = 1;
+        for (int i = 1; i <= amount; i++) {
+            for (auto coin : coins) {
+                if(i - coin >= 0) {
+                    dp[i] = min(dp[i], dp[i - coin] + 1);
+                }
+            }
+           // dp[i] = tmp;
+        }
+        // for (auto s : dp) {
+        //     cout << s << " ";
+        // }
+        // cout << endl;
+        if (dp[amount] == amount + 1)
+            return -1;
+        return dp[amount];
+
+    }
+};
+```
+
+### 最长上升子序列
+- 基础DP思路
+  - 状态转移公式 `dp[i]=max(dp[j])+1,其中0≤j<i且num[j]<num[i]`
+  - 初始化：`dp[0]=0` 
+  - 最后结果需要从dp中选取最大的值
+  - 时间复杂度O(n^2), 空间复杂度 O(N)
+
+```
+class Solution {
+public:
+    int lengthOfLIS(vector<int>& nums) {
+        vector<int> dp(nums.size(), 0);
+        dp[0] = 1;
+        int ans = 1;
+        for (int i = 1; i < nums.size(); i++) {
+            dp[i] = 1;
+            for (int j = 0; j< i; j++) {
+                if (nums[j] < nums[i]) {
+                    dp[i] = max(dp[i], dp[j] + 1);
+                }
+            }
+            ans = max(dp[i], ans);
+        } 
+        // for(auto s: dp)
+        //     cout << s << " ";
+        // cout << endl;
+        // sort(dp.begin(), dp.end());
+        return ans;
+    }
+};
+```
+
