--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -1,5 +1,5 @@
 
-
+[TOC]
 ### 二分查找基本模版：
 - input: (array,target)
 - return: index/-1
@@ -13,7 +13,7 @@ class Solution {
 public:
     int search(vector<int>& nums, int target) {
         int left=0;
-        int right=nums.size()-1;
+        int right=nums.size()-1; 
         while(left<=right){
             int mid=left+(right-left)/2;
             if(nums[mid]==target) return mid;
@@ -259,6 +259,53 @@ public:
     }
 };
 ```
+- 0403优化
+  - 找到左边界后，缩小第二次遍历的范围
+```
+class Solution {
+public:
+    int binarySearch(vector<int>& nums, int target, int left, int right, int direction) {
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (nums[mid] < target) {
+                left = mid + 1;
+            }
+            else if (nums[mid] == target) {
+                if (direction == 0) {
+                    right = mid - 1;
+                }
+                else {
+                    left = mid + 1;
+                }
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        if (direction == 0) {
+            return left<nums.size() && nums[left] == target ? left : -1;
+        }
+        else {
+            return right<nums.size() && nums[right] == target ? right : -1;
+        }
+     }
+    vector<int> searchRange(vector<int>& nums, int target) {
+        int Len = nums.size();
+        vector<int> ans;
+        int left = binarySearch(nums, target, 0, Len - 1, 0);
+        if (left != -1) {
+            ans.push_back(left);
+            int right = binarySearch(nums, target, left, Len - 1, 1);
+            ans.push_back(right);
+        }
+        else {
+            ans.push_back(-1);
+            ans.push_back(-1);
+        }
+        return ans;
+  }
+};
+```
 
 ### 658. Find K Closest Elements [Medium]
 - 中等题目
@@ -414,7 +461,8 @@ class Solution {
 public:
     int findPeakElement(vector<int>& nums) {
         int left = 0;
-        int right = nums.size()-1;
+        int right = nums.size()-1; 
+        // 主要是用于解决当数组长度为1时的特殊情况
 
         while(left<right){
             int mid = left+(right-left)/2;
