--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -277,6 +277,36 @@ public:
   - `C = C(m+n-2,m-1)` 组合公式
 
 
+### 63. 不同路径 2
+- 在上面的基础上，增加障碍物品, dp时跳过障碍点
+- 使用滚动数组的方式来减少dp表的内存占用
+- 时间复杂度 `O(mn)` 空间复杂度`O(n)`
+```
+class Solution {
+public:
+    int uniquePathsWithObstacles(vector<vector<int>>& obstacleGrid) {
+        int m = obstacleGrid.size();
+        int n = obstacleGrid[0].size();
+        vector<int> dp(n);
+        dp[0] = (obstacleGrid[0][0] == 0);
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < n; j++) {
+                if (obstacleGrid[i][j]) {
+                    dp[j] = 0;
+                    continue;
+                }
+                if (j - 1 >=0 && obstacleGrid[i][j-1] ==0) {
+                    dp[j] += dp[j-1];
+                }
+            }
+        }
+        return dp.back();
+    }
+};
+```
+### 980. 不同路径 3 [Hard]
+
+
 ### 322. 零钱兑换 [Medium]
 - dp方法的基础，**状态转移公式**： `dp[i] = min (dp[i - r_k]) + 1`
 - **初始化**： 
@@ -340,6 +370,43 @@ public:
         // cout << endl;
         // sort(dp.begin(), dp.end());
         return ans;
+    }
+};
+```
+
+- **贪心+二分搜索**
+  - 要使上升子序列尽可能的长，则我们需要让序列上升得尽可能慢，因此我们希望每次在上升子序列最后加上的那个数尽可能的小。
+  - 基于上面的贪心思路，维护一个数组 d[i]，表示长度为 ii 的最长上升子序列的末尾元素的最小值，用 \textit{len}len 记录目前最长上升子序列的长度，起始时 lenlen 为 11，d[1] = \textit{nums}[0]d[1]=nums[0]
+
+
+```
+class Solution {
+public:
+    int lengthOfLIS(vector<int>& nums) {
+        vector<int> tail; // 定义不同长度的子序列的最大尾值
+        int ans;
+        tail.push_back(nums[0]);
+        for (int i = 1; i < nums.size(); i++) {
+            if (nums[i] > tail.back()) {
+                tail.push_back(nums[i]);
+            }
+            else {
+                int left = 0;
+                int right = tail.size() - 1;
+                //cout << 'l' << left << 'r' << right << " "<< nums[i] <<endl;
+                while(left < right) {
+                    // int mid = left + (right - left)/2;
+                    int mid = (left + right) / 2;
+                    if (tail[mid] < nums[i]) {
+                        left = mid + 1;
+                    } else {
+                        right = mid;
+                    }
+                }
+               tail[left] = nums[i];
+            }
+        }
+        return tail.size();
     }
 };
 ```
