--- a/leetcode/查找/二分查找.md
+++ b/leetcode/查找/二分查找.md
@@ -68,11 +68,12 @@ public:
         while(left<=right){
             int mid=left+(right-left)/2;
             //cout<<mid<<endl;
+            // 注意： 强制类型转换的方式
             if((long long )mid*mid>x){
                 right=mid-1;
             }
             else if((long long )mid*mid<=x){
-          
+                // 问题的特殊性觉得，我们存储的用于是左界，
                 ans=mid;
                 left=mid+1;
             }
@@ -1098,6 +1099,43 @@ public:
 };
 ```
 
+### 29. 两数相除 [Medium]
+- 同样是二分思想的利用，特点在于二分倍增
+- 不用* / 运算符实现整数除法，即比较除数与被除数的大小，对除数进行倍增处理，当倍增值超过被除数时进行调整，对剩下的被除数/余数继续与除数进行倍增比较
+- 时间复杂度 O(logN)
+```
+class Solution {
+public:
+    int div(long a, long b) {
+        if (a < b) return 0;
+        int count = 1;
+        long tb = b;
+        while( a >= (tb + tb)) {
+            count = count + count ;
+            tb = tb + tb;
+        }
+        return div(a - tb, b) + count;
+    }
+    int divide(int dividend, int divisor) {
+        if (divisor == 1)
+            return dividend;
+        if (dividend == 0)
+            return 0;
+        if (divisor == -1) {
+            if (dividend > INT_MIN)
+                return -dividend;
+            return INT_MAX;
+        }
+        int sign = (dividend > 0 && divisor > 0) || (dividend < 0 && divisor < 0);
+        long a =  dividend;
+        long b = divisor;
+        a = a > 0 ?  a  : -a;
+        b = b > 0 ? b : - b;
+        //cout << a << " " << b << endl;
+        return sign ? div(a,b) : div(a, b) * (-1) ;
+    }
+};
+```
 
 ## 总结体会
 - 二分查找的应用思考：本质上需要在一定空间上按照某种依据进行答案搜索的情况，可以通过二分查找缩小搜索空间，严格依赖有序性。
