--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -11,7 +11,7 @@
 - [21. 合并两个有序链表](#21-合并两个有序链表)
 - [234. 回文链表判断](#234-回文链表判断)
 - [141. 环形链表操作](#141-环形链表操作)
-- [328. 奇偶数组  [Medium]](#328-奇偶数组-medium)
+- [328. 奇偶数组  [Medium]](#328-奇偶数组--medium)
 - [160. 相交链表](#160-相交链表)
 - [小结](#小结)
 
@@ -543,6 +543,22 @@ public:
         else {
             return nullptr;
         }
+    }
+};
+```
+- 更简单的思路，让两个指针都走m+n步，肯定会相遇，当A遍历到尾部时重新定位到B；同样B定位到A
+  - 时间复杂度 O(m+n)
+```
+class Solution {
+public:
+    ListNode *getIntersectionNode(ListNode *headA, ListNode *headB) {
+        ListNode* pA = headA;
+        ListNode* pB = headB;
+        while(pA != pB) {
+            pA = (pA == nullptr) ?  headB : pA -> next;
+            pB = (pB == nullptr) ? headA : pB -> next;
+        }
+        return pA;
     }
 };
 ```
