--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -13,6 +13,7 @@
 - [141. 环形链表操作](#141-环形链表操作)
 - [328. 奇偶数组  [Medium]](#328-奇偶数组--medium)
 - [160. 相交链表](#160-相交链表)
+- [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
 - [小结](#小结)
 
 <!-- /code_chunk_output -->
@@ -563,6 +564,101 @@ public:
 };
 ```
 
+
+### 146. LRU cache结构设计 [Medium]
+- 哈希表和链表结合，实现O(1)的查找和cache调整
+- 构建双向链表进行数据k-v存储，哈希表存储key对应的节点指针位置
+  - 基于双向链表在删除尾部节点的时候更加高效，单向链表删除时需要记录前驱节点，操作比较复杂
+  - 每次对节点的操作后将节点移动到的头部链表
+
+- 通过自己**定义节点结构体来完成设计**
+- 为了代码简洁：可以设计`addToHead` `MoveToHead` `removeNode` 不同的功能
+
+```
+class LRUCache {
+public:
+    // 双向链表
+    struct DLinkNode {
+        int key;
+        int value;
+        DLinkNode* prev;
+        DLinkNode* next; 
+        DLinkNode(): key(0), value(0), prev(nullptr), next(nullptr) {}
+        DLinkNode(int k, int v): key(k), value(v), prev(nullptr), next(nullptr) {}
+    };
+
+    int capacity = 0;
+    int size = 0;
+    DLinkNode* head;
+    DLinkNode* tail;
+    unordered_map<int, DLinkNode*> kv;
+    LRUCache(int _capacity) {
+        capacity = _capacity;
+        size = 0;
+         head = new DLinkNode();
+         tail = new DLinkNode();
+        head -> next = tail;
+        tail -> prev = head;
+    }
+    
+    int get(int key) {
+        if (kv.count(key)) {
+            moveToHead(kv[key]);
+            return kv[key] -> value;
+        }
+        return -1;
+    }
+    void moveToHead(DLinkNode* node) {
+        removeNode(node);
+        addToHead(node);
+    }
+    void removeNode (DLinkNode* node) {
+        node -> prev -> next = node -> next;
+        node -> next -> prev = node -> prev;
+    }
+    void addToHead(DLinkNode* node) {
+        node -> next = head -> next;
+        head -> next -> prev = node;
+        head -> next  = node;
+        node -> prev = head;
+    }
+    
+    void put(int key, int value) {
+        if (size < capacity) {
+            if (kv.count(key)) {
+                kv[key] -> value = value;
+                moveToHead(kv[key]); //将修改后到节点调整到链表头部
+            }
+            else {
+                DLinkNode* tmp =  new DLinkNode(key, value);
+                kv[key] = tmp;
+                addToHead(tmp); // 将新节点直接添加到链表头部
+                size++;
+            }
+        }
+        else {
+            if (kv.count(key)) {
+                kv[key] -> value = value;
+                moveToHead(kv[key]); //修改后移动到表头
+            }
+            else {
+                DLinkNode* drop = tail -> prev;
+                DLinkNode* tmp =  new DLinkNode(key, value);
+                addToHead(tmp); // 调整
+                kv[key] = tmp;
+                cout << size << " " << capacity << endl;
+                cout << "drop" << drop -> key << endl;
+                removeNode(drop); // 调整
+                kv.erase(drop -> key);
+                delete drop;
+                
+                //size++;
+            }
+        }
+
+    }
+};
+```
 ### 小结
 - 掌握链表的构成方式(单向/双向)
 - 掌握基本的操作方式：**删除节点、遍历链表、反转链表以及局部反转链表的操作**
