--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -8,6 +8,7 @@
 - [237. 删除链表指定节点](#237-删除链表指定节点)
 - [19. 删除链表的倒数第N个节点](#19-删除链表的倒数第n个节点)
 - [206. 反转链表-easy](#206-反转链表-easy)
+- [25. k个一组反转链表 **HARD**](#25-k个一组反转链表-hard)
 - [21. 合并两个有序链表](#21-合并两个有序链表)
 - [234. 回文链表判断](#234-回文链表判断)
 - [141. 环形链表操作](#141-环形链表操作)
@@ -278,6 +279,40 @@ public:
     }
 };
 ```
+### 25. k个一组反转链表 **HARD**
+- 递归做法：
+  - 每次遍历到尾部节点后进行反转操作
+  - 然后执行递归K个元素反转
+  - 时间复杂度 O(N) 空间复杂度 O（1）
+```
+class Solution {
+public:
+    ListNode* reverseKGroup(ListNode* head, int k) {
+        if (!head) 
+            return head;
+        ListNode* tail = head;
+        for (int i = 0; i < k; i++) {
+            if (!tail)// 不满k的子区间
+                return head;
+            tail = tail ->  next;
+        }
+        // 到达尾部后进行交换 反转链表的基本操作 最后prev记录头部
+        ListNode* cur = head;
+        ListNode* prev = nullptr; 
+        ListNode* next = nullptr;
+        while (cur != tail) {
+            next = cur -> next;
+            cur -> next = prev;
+            prev = cur;
+            cur = next;
+        }
+        head -> next = reverseKGroup(tail, k);
+        return prev;
+    }
+};
+```
+- 其他做法： **使用栈**，当栈满时进行出栈操作，对于未满的情况需要额外处理
+  - 空间复杂度 O(N) 时间复杂度 O(N)
 
 ### 21. 合并两个有序链表
 
