--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -48,8 +48,8 @@
   - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
   - [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
   - [257. 打印二叉树所有路径](#257-打印二叉树所有路径)
-  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
-  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
+  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素-medium)
+  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像-反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
   - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
