--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -12,7 +12,7 @@
 - [21. 合并两个有序链表](#21-合并两个有序链表)
 - [234. 回文链表判断](#234-回文链表判断)
 - [141. 环形链表操作](#141-环形链表操作)
-- [328. 奇偶数组  [Medium]](#328-奇偶数组--medium)
+- [328. 奇偶数组  [Medium]](#328-奇偶数组-medium)
 - [160. 相交链表](#160-相交链表)
 - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
 - [小结](#小结)
