--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -48,12 +48,13 @@
   - [113. 二叉树路径总和 2 [Medium] [Tencent]](#113-二叉树路径总和-2-medium-tencent)
   - [437. 二叉树路径总和3 [Medium]](#437-二叉树路径总和3-medium)
   - [257. 打印二叉树所有路径](#257-打印二叉树所有路径)
-  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素-medium)
-  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像-反转二叉树)
+  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
+  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
   - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
+  - [199. 二叉树的右视图](#199-二叉树的右视图)
 - [面试](#面试)
 
 <!-- /code_chunk_output -->
@@ -1308,6 +1309,68 @@ public:
 };
 ```
 
+### 199. 二叉树的右视图
+- 层次遍历方法，取最右节点值即可
+  - 时间复杂度 O(N) 空间复杂度O(N)
+
+```
+class Solution {
+public:
+    vector<int> rightSideView(TreeNode* root) {
+        queue<TreeNode*> qt;
+        vector<int> ans;
+        if (!root) 
+            return ans;
+        qt.push(root);
+        while(!qt.empty()) {
+            int s = qt.size();
+            int value = 0;
+            for (int i = 0; i < s; i++) {
+                TreeNode* cur = qt.front();
+                qt.pop();
+                value = cur -> val;
+                if (cur -> left) {
+                    qt.push(cur -> left);
+                }
+                if (cur -> right) {
+                    qt.push(cur -> right);
+                } 
+            }
+            ans.push_back(value);
+        }
+        return ans;
+    }
+};
+```
+
+- **DFS 递归做法**
+  - 基于`root right left`的遍历顺序，先保存节点信息，自顶而下的处理方式
+  - 为了只保存最右侧的一条路径，需要结合深度信息，`当当前深度和结果数组长度一致时，才进行保存处理`
+  - 时间复杂度 O(N) 空间复杂度O(N)
+
+```
+class Solution {
+public:
+    vector<int> ans;
+    void dfs(TreeNode* root, int depth) {
+        if (!root)
+            return;
+        if (ans.size() == depth)
+            ans.push_back(root->val);
+        depth++;
+        dfs(root -> right, depth);
+        dfs(root -> left, depth);
+
+    }
+    vector<int> rightSideView(TreeNode* root) {
+
+        if (!root) 
+            return ans;
+        dfs(root, 0 );
+        return ans;
+    }
+};
+```
 ## 面试
 - 二叉树的序列化和反序列化
 - 子结构
