--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -144,3 +144,36 @@ public:
     }
 };
 ```
+
+### 42. 接雨水 [Hard] [*]
+- 当前位置的盛水量取决于左侧/右侧相对最高位置的比较情况
+- 使用双指针法，每次更新左/右当前的最高位置，取最低位置计算结果
+  - 本质上将，当前位置的接水量取决于当前位置左右的最高点
+  - 双指针法简化了重复求每个位置左右最高点的计算过程
+- 时间复杂度 O(N)
+
+```
+class Solution {
+public:
+    int trap(vector<int>& height) {
+        int l_max = 0;
+        int r_max = 0;
+        int left = 0;
+        int right = height.size() - 1;
+        int ans = 0;
+        while (left <= right) {
+            l_max = max(l_max, height[left]);
+            r_max = max(r_max, height[right]);
+            if (r_max < l_max) {
+                ans += (r_max - height[right]);
+                right--;
+            }
+            else {
+                ans += (l_max - height[left]);
+                left++;
+            }
+        }
+        return ans;
+    }
+};
+```
