--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -61,7 +61,7 @@ public:
 ```
 
 
-### 121. 买卖股票的最佳时机
+### 121. 买卖股票的最佳时机 *
 
 - 计算最大差值，如下所示一次遍历，记录当前最小值并计算差值。
 - 时间复杂度O(n) 空间复杂度O(1)
@@ -85,7 +85,7 @@ public:
 ```
 
 
-### 53. 最大子序和
+### 53. 最大子序和 *
 - 动态规划求解 **学习掌握这种节省空间的变量管理写法**
     - f(i)=max{f(i-1)+ai,ai} 状态转移公式 f(i)即表示以第i个数字结尾的子序列的最大值
     - 时间复杂度为： O(n) 空间复杂度O(1)
